--- a/gan_module/disentangled .ipynb
+++ b/gan_module/disentangled .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,61 +33,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential_22\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "conv2d_48 (Conv2D)           (None, 50, 1, 16)         80        \n",
-      "_________________________________________________________________\n",
-      "conv2d_49 (Conv2D)           (None, 50, 1, 32)         8224      \n",
-      "_________________________________________________________________\n",
-      "conv2d_50 (Conv2D)           (None, 50, 1, 16)         16400     \n",
-      "_________________________________________________________________\n",
-      "average_pooling2d_3 (Average (None, 6, 1, 16)          0         \n",
-      "_________________________________________________________________\n",
-      "dense_16 (Dense)             (None, 6, 1, 2)           34        \n",
-      "=================================================================\n",
-      "Total params: 24,738\n",
-      "Trainable params: 24,738\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
-   "source": [
-    "test = make_generator(50)\n",
-    "test.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cnn_classifier(blocksize):\n",
+    "def symbol_classifier(blocksize):\n",
     "    model = keras.Sequential()\n",
     "    model.add(layers.Conv2D(16, (1, 2), padding='same', activation='relu', input_shape=(blocksize, 1, 2)))\n",
-    "    model.add(layers.MaxPool2D(1,5))\n",
     "    model.add(layers.Conv2D(32, 3, padding='same', activation='relu'))\n",
-    "    model.add(layers.MaxPool2D(1,5))\n",
     "    model.add(layers.Conv2D(64, 3, padding='same', activation='relu'))\n",
-    "    model.add(layers.Flatten())\n",
     "    model.add(layers.Dense(64, activation='relu'))\n",
-    "    model.add(layers.Dense(2))\n",
+    "    model.add(layers.Dense(20))\n",
     "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -96,35 +58,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_8\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_18 (Conv2D)           (None, 50, 1, 16)         80        \n",
+      "conv2d (Conv2D)              (None, 50, 1, 16)         80        \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_7 (MaxPooling2 (None, 10, 1, 16)         0         \n",
+      "conv2d_1 (Conv2D)            (None, 50, 1, 32)         4640      \n",
       "_________________________________________________________________\n",
-      "conv2d_19 (Conv2D)           (None, 10, 1, 32)         4640      \n",
+      "conv2d_2 (Conv2D)            (None, 50, 1, 64)         18496     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_8 (MaxPooling2 (None, 2, 1, 32)          0         \n",
+      "dense (Dense)                (None, 50, 1, 64)         4160      \n",
       "_________________________________________________________________\n",
-      "conv2d_20 (Conv2D)           (None, 2, 1, 64)          18496     \n",
-      "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 128)               0         \n",
-      "_________________________________________________________________\n",
-      "dense_10 (Dense)             (None, 64)                8256      \n",
-      "_________________________________________________________________\n",
-      "dense_11 (Dense)             (None, 2)                 130       \n",
+      "dense_1 (Dense)              (None, 50, 1, 20)         1300      \n",
       "=================================================================\n",
-      "Total params: 31,602\n",
-      "Trainable params: 31,602\n",
+      "Total params: 28,676\n",
+      "Trainable params: 28,676\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
     }
    ],
    "source": [
-    "test = cnn_classifier(50)\n",
+    "test = symbol_classifier(50)\n",
     "test.summary()"
    ]
   },
