--- a/gan_module/disentangled .ipynb
+++ b/gan_module/disentangled .ipynb
@@ -33,15 +33,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def symbol_classifier(blocksize):\n",
     "    model = keras.Sequential()\n",
     "    model.add(layers.Conv2D(16, (1, 2), padding='same', activation='relu', input_shape=(blocksize, 1, 2)))\n",
-    "    model.add(layers.Conv2D(32, 3, padding='same', activation='relu'))\n",
-    "    model.add(layers.Conv2D(64, 3, padding='same', activation='relu'))\n",
+    "    model.add(layers.AveragePooling2D((1, 1)))\n",
+    "    model.add(layers.Conv2D(32, (4,1), padding='same', activation='relu'))\n",
+    "    model.add(layers.AveragePooling2D((1, 1)))\n",
+    "    model.add(layers.Conv2D(64, (4,1), padding='same', activation='relu'))\n",
+    "    model.add(layers.AveragePooling2D((1, 1)))\n",
     "    model.add(layers.Dense(64, activation='relu'))\n",
     "    model.add(layers.Dense(20))\n",
     "    return model"
@@ -49,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -58,22 +61,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_3\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d (Conv2D)              (None, 50, 1, 16)         80        \n",
+      "conv2d_9 (Conv2D)            (None, 50, 1, 16)         80        \n",
       "_________________________________________________________________\n",
-      "conv2d_1 (Conv2D)            (None, 50, 1, 32)         4640      \n",
+      "average_pooling2d (AveragePo (None, 50, 1, 16)         0         \n",
       "_________________________________________________________________\n",
-      "conv2d_2 (Conv2D)            (None, 50, 1, 64)         18496     \n",
+      "conv2d_10 (Conv2D)           (None, 50, 1, 32)         2080      \n",
       "_________________________________________________________________\n",
-      "dense (Dense)                (None, 50, 1, 64)         4160      \n",
+      "average_pooling2d_1 (Average (None, 50, 1, 32)         0         \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 50, 1, 20)         1300      \n",
+      "conv2d_11 (Conv2D)           (None, 50, 1, 64)         8256      \n",
+      "_________________________________________________________________\n",
+      "average_pooling2d_2 (Average (None, 50, 1, 64)         0         \n",
+      "_________________________________________________________________\n",
+      "dense_6 (Dense)              (None, 50, 1, 64)         4160      \n",
+      "_________________________________________________________________\n",
+      "dense_7 (Dense)              (None, 50, 1, 20)         1300      \n",
       "=================================================================\n",
-      "Total params: 28,676\n",
-      "Trainable params: 28,676\n",
+      "Total params: 15,876\n",
+      "Trainable params: 15,876\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
