--- a/gan_module/disentangled .ipynb
+++ b/gan_module/disentangled .ipynb
@@ -33,17 +33,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[3],\n",
-       "       [4]])"
+       "array([[3]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +52,7 @@
     "test1 = [[3],[4]]\n",
     "test.append(test1)\n",
     "test = np.array(test)\n",
-    "test[0,:]"
+    "test[:,0]"
    ]
   },
   {
