--- a/gan_module/disentangled .ipynb
+++ b/gan_module/disentangled .ipynb
@@ -33,22 +33,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [[0.6697378,  0.99853426],\n",
+    " [0.65112287, 0.9698937],\n",
+    " [0.4225644,  0.5451022],\n",
+    " [0.4163673,  0.4881644]]\n",
+    "data = np.array(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "array([0.6697378 , 0.65112287, 0.4225644 , 0.4163673 ])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "70 % 10"
+    "data[:,0]"
    ]
   },
   {
