--- a/gan_module/disentangled .ipynb
+++ b/gan_module/disentangled .ipynb
@@ -33,35 +33,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = [[0.6697378,  0.99853426],\n",
-    " [0.65112287, 0.9698937],\n",
-    " [0.4225644,  0.5451022],\n",
-    " [0.4163673,  0.4881644]]\n",
-    "data = np.array(data)"
+    "def make_generator(blockSize):\n",
+    "    model = tf.keras.Sequential()\n",
+    "    model.add(layers.Conv2D(16, (1, 2), strides=(1, 2), activation=\"linear\",\n",
+    "                            input_shape=(blockSize, 2, 1)))\n",
+    "    model.add(layers.Reshape((blockSize, 16, 1)))\n",
+    "    model.add(layers.Conv2D(32, (1, 16), activation=\"relu\", padding='same'))\n",
+    "    model.add(layers.AveragePooling2D((1, 1)))\n",
+    "    model.add(layers.Conv2D(16, (1, 32), activation=\"relu\", padding='same'))\n",
+    "    model.add(layers.AveragePooling2D((1, 8)))\n",
+    "    model.add(layers.Dense(1))\n",
+    "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([0.6697378 , 0.65112287, 0.4225644 , 0.4163673 ])"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_12\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_34 (Conv2D)           (None, 50, 1, 16)         48        \n",
+      "_________________________________________________________________\n",
+      "reshape_9 (Reshape)          (None, 50, 16, 1)         0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_35 (Conv2D)           (None, 50, 16, 32)        544       \n",
+      "_________________________________________________________________\n",
+      "average_pooling2d_30 (Averag (None, 50, 16, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_36 (Conv2D)           (None, 50, 16, 16)        16400     \n",
+      "_________________________________________________________________\n",
+      "average_pooling2d_31 (Averag (None, 50, 2, 16)         0         \n",
+      "_________________________________________________________________\n",
+      "dense_8 (Dense)              (None, 50, 2, 1)          17        \n",
+      "=================================================================\n",
+      "Total params: 17,009\n",
+      "Trainable params: 17,009\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
     }
    ],
    "source": [
-    "data[:,0]"
+    "test = make_generator(50)\n",
+    "test.summary()"
    ]
   },
   {
