--- a/gan_module/disentangled .ipynb
+++ b/gan_module/disentangled .ipynb
@@ -33,52 +33,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "def make_generator(blockSize):\n",
     "    model = tf.keras.Sequential()\n",
-    "    model.add(layers.Conv2D(16, (1, 2), strides=(1, 2), activation=\"linear\",\n",
+    "    model.add(layers.Conv2D(8, (5, 2), strides=(5, 2), activation=\"relu\", padding='same',\n",
     "                            input_shape=(blockSize, 2, 1)))\n",
-    "    model.add(layers.Reshape((blockSize, 16, 1)))\n",
-    "    model.add(layers.Conv2D(32, (1, 16), activation=\"relu\", padding='same'))\n",
     "    model.add(layers.AveragePooling2D((1, 1)))\n",
-    "    model.add(layers.Conv2D(16, (1, 32), activation=\"relu\", padding='same'))\n",
-    "    model.add(layers.AveragePooling2D((1, 8)))\n",
-    "    model.add(layers.Dense(1))\n",
+    "    model.add(layers.Conv2D(4, (5, 1), strides=(5,1), activation=\"relu\", padding='same'))\n",
+    "    model.add(layers.AveragePooling2D((1, 1)))\n",
+    "    model.add(layers.Conv2DTranspose(4, kernel_size=(5,1), strides=(5,1), activation='relu', padding='same'))\n",
+    "    model.add(layers.Conv2DTranspose(8, kernel_size=(5,2), strides=(5,2), activation='relu', padding='same'))\n",
+    "    model.add(layers.Conv2D(1, kernel_size=(3,3), activation='sigmoid', padding='same'))\n",
     "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_12\"\n",
+      "Model: \"sequential_30\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_34 (Conv2D)           (None, 50, 1, 16)         48        \n",
+      "conv2d_78 (Conv2D)           (None, 10, 1, 8)          88        \n",
       "_________________________________________________________________\n",
-      "reshape_9 (Reshape)          (None, 50, 16, 1)         0         \n",
+      "average_pooling2d_60 (Averag (None, 10, 1, 8)          0         \n",
       "_________________________________________________________________\n",
-      "conv2d_35 (Conv2D)           (None, 50, 16, 32)        544       \n",
+      "conv2d_79 (Conv2D)           (None, 2, 1, 4)           164       \n",
       "_________________________________________________________________\n",
-      "average_pooling2d_30 (Averag (None, 50, 16, 32)        0         \n",
+      "average_pooling2d_61 (Averag (None, 2, 1, 4)           0         \n",
       "_________________________________________________________________\n",
-      "conv2d_36 (Conv2D)           (None, 50, 16, 16)        16400     \n",
+      "conv2d_transpose_39 (Conv2DT (None, 10, 1, 4)          84        \n",
       "_________________________________________________________________\n",
-      "average_pooling2d_31 (Averag (None, 50, 2, 16)         0         \n",
+      "conv2d_transpose_40 (Conv2DT (None, 50, 2, 8)          328       \n",
       "_________________________________________________________________\n",
-      "dense_8 (Dense)              (None, 50, 2, 1)          17        \n",
+      "conv2d_80 (Conv2D)           (None, 50, 2, 1)          73        \n",
       "=================================================================\n",
-      "Total params: 17,009\n",
-      "Trainable params: 17,009\n",
+      "Total params: 737\n",
+      "Trainable params: 737\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
