--- a/gan_module/disentangled .ipynb
+++ b/gan_module/disentangled .ipynb
@@ -33,52 +33,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "def make_generator(blockSize):\n",
     "    model = tf.keras.Sequential()\n",
-    "    model.add(layers.Conv2D(8, (5, 2), strides=(5, 2), activation=\"relu\", padding='same',\n",
+    "    model.add(layers.Conv2D(4, (5, 2), strides=(2, 2), activation=\"relu\", padding='same',\n",
     "                            input_shape=(blockSize, 2, 1)))\n",
     "    model.add(layers.AveragePooling2D((1, 1)))\n",
-    "    model.add(layers.Conv2D(4, (5, 1), strides=(5,1), activation=\"relu\", padding='same'))\n",
-    "    model.add(layers.AveragePooling2D((1, 1)))\n",
-    "    model.add(layers.Conv2DTranspose(4, kernel_size=(5,1), strides=(5,1), activation='relu', padding='same'))\n",
-    "    model.add(layers.Conv2DTranspose(8, kernel_size=(5,2), strides=(5,2), activation='relu', padding='same'))\n",
+    "    model.add(layers.Conv2D(2, (5, 1), activation=\"relu\", padding='same'))\n",
+    "    model.add(layers.Conv2DTranspose(2, kernel_size=(5,1), activation='relu', padding='same'))\n",
+    "    model.add(layers.Conv2DTranspose(4, kernel_size=(5,2), strides=(2,2), activation='relu', padding='same'))\n",
     "    model.add(layers.Conv2D(1, kernel_size=(3,3), activation='sigmoid', padding='same'))\n",
     "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_30\"\n",
+      "Model: \"sequential_28\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_78 (Conv2D)           (None, 10, 1, 8)          88        \n",
+      "conv2d_81 (Conv2D)           (None, 25, 1, 4)          44        \n",
       "_________________________________________________________________\n",
-      "average_pooling2d_60 (Averag (None, 10, 1, 8)          0         \n",
+      "average_pooling2d_55 (Averag (None, 25, 1, 4)          0         \n",
       "_________________________________________________________________\n",
-      "conv2d_79 (Conv2D)           (None, 2, 1, 4)           164       \n",
+      "conv2d_82 (Conv2D)           (None, 25, 1, 2)          42        \n",
       "_________________________________________________________________\n",
-      "average_pooling2d_61 (Averag (None, 2, 1, 4)           0         \n",
+      "conv2d_transpose_51 (Conv2DT (None, 25, 1, 2)          22        \n",
       "_________________________________________________________________\n",
-      "conv2d_transpose_39 (Conv2DT (None, 10, 1, 4)          84        \n",
+      "conv2d_transpose_52 (Conv2DT (None, 50, 2, 4)          84        \n",
       "_________________________________________________________________\n",
-      "conv2d_transpose_40 (Conv2DT (None, 50, 2, 8)          328       \n",
-      "_________________________________________________________________\n",
-      "conv2d_80 (Conv2D)           (None, 50, 2, 1)          73        \n",
+      "conv2d_83 (Conv2D)           (None, 50, 2, 1)          37        \n",
       "=================================================================\n",
-      "Total params: 737\n",
-      "Trainable params: 737\n",
+      "Total params: 229\n",
+      "Trainable params: 229\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
