--- a/gan_module/disentangled .ipynb
+++ b/gan_module/disentangled .ipynb
@@ -33,49 +33,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "def make_generator(blockSize):\n",
     "    model = tf.keras.Sequential()\n",
-    "    model.add(layers.Conv2D(4, (5, 2), strides=(2, 2), activation=\"relu\", padding='same',\n",
+    "    model.add(layers.Conv2D(16, (5, 2), strides=(2, 2), activation=\"relu\", padding='same',\n",
     "                            input_shape=(blockSize, 2, 1)))\n",
-    "    model.add(layers.AveragePooling2D((1, 1)))\n",
-    "    model.add(layers.Conv2D(2, (5, 1), activation=\"relu\", padding='same'))\n",
-    "    model.add(layers.Conv2DTranspose(2, kernel_size=(5,1), activation='relu', padding='same'))\n",
-    "    model.add(layers.Conv2DTranspose(4, kernel_size=(5,2), strides=(2,2), activation='relu', padding='same'))\n",
-    "    model.add(layers.Conv2D(1, kernel_size=(3,3), activation='sigmoid', padding='same'))\n",
+    "    model.add(layers.Conv2D(8, (5, 1), activation=\"relu\", padding='same'))\n",
+    "    model.add(layers.Flatten())\n",
+    "    model.add(layers.Dense(50))\n",
     "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_32\"\n",
+      "Model: \"sequential_35\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_93 (Conv2D)           (None, 25, 1, 4)          44        \n",
+      "conv2d_100 (Conv2D)          (None, 25, 1, 16)         176       \n",
       "_________________________________________________________________\n",
-      "average_pooling2d_59 (Averag (None, 25, 1, 4)          0         \n",
+      "conv2d_101 (Conv2D)          (None, 25, 1, 8)          648       \n",
       "_________________________________________________________________\n",
-      "conv2d_94 (Conv2D)           (None, 25, 1, 2)          42        \n",
+      "flatten_4 (Flatten)          (None, 200)               0         \n",
       "_________________________________________________________________\n",
-      "conv2d_transpose_59 (Conv2DT (None, 25, 1, 2)          22        \n",
-      "_________________________________________________________________\n",
-      "conv2d_transpose_60 (Conv2DT (None, 50, 2, 4)          84        \n",
-      "_________________________________________________________________\n",
-      "conv2d_95 (Conv2D)           (None, 50, 2, 1)          37        \n",
+      "dense (Dense)                (None, 50)                10050     \n",
       "=================================================================\n",
-      "Total params: 229\n",
-      "Trainable params: 229\n",
+      "Total params: 10,874\n",
+      "Trainable params: 10,874\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -87,12 +81,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def symbol_classifier(blocksize):\n",
+    "# def symbol_classifier(blocksize):\n",
     "    model = keras.Sequential()\n",
     "    model.add(layers.Conv2D(16, (1, 2), padding='same', activation='relu', input_shape=(blocksize, 1, 2)))\n",
     "    model.add(layers.AveragePooling2D((1, 1)))\n",
